--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
                 <ul>
                     <li><a href="#projects">projects</a></li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="#contact">contact</a></li>
 
                 </ul>
             </nav>
@@ -34,7 +34,7 @@
 
             <a onclick='handleEvent()' href="#projects">projects</a>
             <br>
-            <a href="">contact</a>
+            <a onclick="handleEvent()" href="#contact">contact</a>
 
         </nav>
     </div>
@@ -82,7 +82,7 @@
             </div>
         </section>
         <hr>
-        <section class="contact">
+        <section id="contact" class="contact">
             <h2 class="projectshead">Contact</h2>
             <div class="contactcont">
                 <div class="contactsub">
